schemars/tests/ui/invalid_validation_attrs.stderr
error: unknown schemars attribute `foo`
  --> tests/ui/invalid_validation_attrs.rs:11:38
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                      ^^^

error: could not parse `regex` item in schemars attribute
  --> tests/ui/invalid_validation_attrs.rs:11:31
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                               ^^^^^

error: schemars attribute cannot contain both `equal` and `min`
  --> tests/ui/invalid_validation_attrs.rs:11:59
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                                           ^^^^^

error: unknown item in schemars length attribute
  --> tests/ui/invalid_validation_attrs.rs:11:70
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                                                      ^^^

error: schemars attribute cannot contain both `contains` and `regex`
  --> tests/ui/invalid_validation_attrs.rs:30:9
   |
30 |         contains = "bar",
   |         ^^^^^^^^

error: duplicate schemars attribute `regex`
  --> tests/ui/invalid_validation_attrs.rs:31:9
   |
31 |         regex(path = "baz"),
   |         ^^^^^

error: schemars attribute cannot contain both `phone` and `email`
  --> tests/ui/invalid_validation_attrs.rs:33:9
   |
33 |         email,
   |         ^^^^^

error: schemars attribute cannot contain both `phone` and `url`
  --> tests/ui/invalid_validation_attrs.rs:34:9
   |
34 |         url
   |         ^^^

error[E0425]: cannot find value `foo` in this scope
  --> tests/ui/invalid_validation_attrs.rs:16:17
   |
16 |         regex = "foo",
   |                 ^^^^^ not found in this scope
